code cleanup for java 16